src/test/ui/borrowck/borrowck-uninit-ref-chain.ast.nll.stderr
error[E0381]: borrow of possibly uninitialized variable: `**x`
  --> $DIR/borrowck-uninit-ref-chain.rs:21:14
   |
LL |     let _y = &**x; //[ast]~ ERROR use of possibly uninitialized variable: `**x` [E0381]
   |              ^^^^ use of possibly uninitialized `**x`

error[E0381]: borrow of possibly uninitialized variable: `**x`
  --> $DIR/borrowck-uninit-ref-chain.rs:25:14
   |
LL |     let _y = &**x; //[ast]~ ERROR use of possibly uninitialized variable: `**x` [E0381]
   |              ^^^^ use of possibly uninitialized `**x`

error[E0381]: borrow of possibly uninitialized variable: `**x`
  --> $DIR/borrowck-uninit-ref-chain.rs:29:14
   |
LL |     let _y = &**x; //[ast]~ ERROR use of possibly uninitialized variable: `**x` [E0381]
   |              ^^^^ use of possibly uninitialized `**x`

error[E0381]: borrow of possibly uninitialized variable: `a.y`
  --> $DIR/borrowck-uninit-ref-chain.rs:46:14
   |
LL |     let _b = &a.y; //[ast]~ ERROR use of possibly uninitialized variable: `a.y` [E0381]
   |              ^^^^ use of possibly uninitialized `a.y`

error[E0381]: borrow of possibly uninitialized variable: `**a.y`
  --> $DIR/borrowck-uninit-ref-chain.rs:51:14
   |
LL |     let _b = &**a.y; //[ast]~ ERROR use of possibly uninitialized variable: `**a.y` [E0381]
   |              ^^^^^^ use of possibly uninitialized `**a.y`

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0381`.
